[project]
name = "li_yuan_pipeline"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.16",
    "polars>=1.35.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.14.2",
    "black>=25.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "li_yuan_pipeline"
registry_modules = [
    "li_yuan_pipeline.components.*",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["B", "C4", "I"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
